--- a/.github/workflows/cleanup-render-preview.yaml
+++ b/.github/workflows/cleanup-render-preview.yaml
@@ -9,6 +9,7 @@ jobs:
     name: Delete Render preview
     if: github.event.pull_request.head.repo.full_name == github.repository
     runs-on: ubuntu-latest
+    environment: qa
     permissions:
       actions: read
       contents: read
