--- a/.github/workflows/ci-medusa.yml
+++ b/.github/workflows/ci-medusa.yml
@@ -75,6 +75,51 @@ jobs:
       RENDER_API_KEY: ${{ secrets.RENDER_API_KEY }}
       RENDER_SERVICE_ID: ${{ secrets.RENDER_SERVICE_ID }}
 
+  comment-preview:
+    name: Comment preview URL
+    if: github.event.pull_request.head.repo.full_name == github.repository && needs.render-preview.result == 'success' && needs.render-preview.outputs.preview_url != ''
+    needs: render-preview
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pull-requests: write
+    steps:
+      - name: Comment preview URL
+        uses: actions/github-script@v7
+        env:
+          PREVIEW_URL: ${{ needs.render-preview.outputs.preview_url }}
+        with:
+          script: |
+            const marker = '<!-- render-preview-url -->';
+            const previewUrl = process.env.PREVIEW_URL;
+            const body = `${marker}\n✅ Render preview: ${previewUrl}`;
+
+            const { owner, repo } = context.repo;
+            const issue_number = context.payload.pull_request.number;
+            const { data: comments } = await github.rest.issues.listComments({
+              owner,
+              repo,
+              issue_number,
+              per_page: 100,
+            });
+            const existing = comments.find((comment) => comment.body?.includes(marker));
+
+            if (existing) {
+              await github.rest.issues.updateComment({
+                owner,
+                repo,
+                comment_id: existing.id,
+                body,
+              });
+            } else {
+              await github.rest.issues.createComment({
+                owner,
+                repo,
+                issue_number,
+                body,
+              });
+            }
+
   record-preview:
     name: Record preview metadata
     if: github.event.pull_request.head.repo.full_name == github.repository && always()
